--- a/src/styles/inputStyles.css
+++ b/src/styles/inputStyles.css
@@ -17,17 +17,17 @@
 /* primary input filled styles */
 
 .ser-input-primary-small-filled {
-  padding: var(--spacing-4);
+  padding: var(--spacing-2);
   border-bottom: solid 0.5px var(--color-grey-4);
 }
 
 .ser-input-primary-medium-filled {
-  padding: var(--spacing-6);
+  padding: var(--spacing-3);
   border-bottom: solid 0.5px var(--color-grey-4);
 }
 
 .ser-input-primary-large-filled {
-  padding: var(--spacing-8);
+  padding: var(--spacing-4);
   border-bottom: solid 0.5px var(--color-grey-4);
   font-size: var(--font-size-medium);
 }
@@ -42,17 +42,17 @@
 }
 
 .ser-input-primary-small-filled {
-  padding: var(--spacing-4);
+  padding: var(--spacing-2);
   border-bottom: solid 0.5px var(--color-grey-4);
 }
 
 .ser-input-primary-medium-filled {
-  padding: var(--spacing-6);
+  padding: var(--spacing-3);
   border-bottom: solid 0.5px var(--color-grey-4);
 }
 
 .ser-input-primary-large-filled {
-  padding: var(--spacing-8);
+  padding: var(--spacing-4);
   border-bottom: solid 0.5px var(--color-grey-4);
   font-size: var(--font-size-medium);
 }
@@ -69,17 +69,17 @@
 /* secondary input filled styles */
 
 .ser-input-secondary-small-filled {
-  padding: var(--spacing-4);
+  padding: var(--spacing-2);
   border-bottom: solid 0.5px var(--color-grey-4);
 }
 
 .ser-input-secondary-medium-filled {
-  padding: var(--spacing-6);
+  padding: var(--spacing-3);
   border-bottom: solid 0.5px var(--color-grey-4);
 }
 
 .ser-input-secondary-large-filled {
-  padding: var(--spacing-8);
+  padding: var(--spacing-4);
   border-bottom: solid 0.5px var(--color-grey-4);
   font-size: var(--font-size-medium);
 }
@@ -96,17 +96,17 @@
 /* primary input outlined styles */
 
 .ser-input-primary-small-outlined {
-  padding: var(--spacing-4);
+  padding: var(--spacing-2);
   border: solid 0.5px var(--color-grey-4);
 }
 
 .ser-input-primary-medium-outlined {
-  padding: var(--spacing-6);
+  padding: var(--spacing-3);
   border: solid 0.5px var(--color-grey-4);
 }
 
 .ser-input-primary-large-outlined {
-  padding: var(--spacing-8);
+  padding: var(--spacing-4);
   border: solid 0.5px var(--color-grey-4);
 }
 
@@ -118,17 +118,17 @@
 }
 
 .ser-input-primary-small-outlined {
-  padding: var(--spacing-4);
+  padding: var(--spacing-2);
   border: solid 0.5px var(--color-grey-4);
 }
 
 .ser-input-primary-medium-outlined {
-  padding: var(--spacing-6);
+  padding: var(--spacing-3);
   border: solid 0.5px var(--color-grey-4);
 }
 
 .ser-input-primary-large-outlined {
-  padding: var(--spacing-8);
+  padding: var(--spacing-4);
   border: solid 0.5px var(--color-grey-4);
   font-size: var(--font-size-medium);
 }
@@ -143,17 +143,17 @@
 /* Secondary outlined input styles */
 
 .ser-input-secondary-small-outlined {
-  padding: var(--spacing-4);
+  padding: var(--spacing-2);
   border: solid 0.5px var(--color-grey-4);
 }
 
 .ser-input-secondary-medium-outlined {
-  padding: var(--spacing-6);
+  padding: var(--spacing-3);
   border: solid 0.5px var(--color-grey-4);
 }
 
 .ser-input-secondary-large-outlined {
-  padding: var(--spacing-8);
+  padding: var(--spacing-4);
   border: solid 0.5px var(--color-grey-4);
   font-size: var(--font-size-medium);
 }
